v1.1.2
- fixed youtube videos sometimes not playing
- added blackjack rules command
	- shows how this version of blackjack is played
- added math countprimes command (m.countprimes)
- added bugs command
- typos